--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,19 +14,19 @@ license="ARR"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="caveore" #mandatory
+modId="connectivity" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="${file.jarVersion}" #mandatory
  # A display name for the mod
-displayName="CaveOre Mod" #mandatory
+displayName="Connectivity Mod" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 #updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="http://caveore.com/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-#logoFile="caveoremod.png" #optional
+#logoFile="connectivity.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this caveore mod goes to Java" #optional
+credits="Thanks for this mod goes to Java" #optional
 # A text field displayed in the mod UI
 authors="Love, Cheese and small house plants" #optional
 # The description text for the mod (multi line!) (#mandatory)
@@ -38,7 +38,7 @@ Have some lorem ipsum.
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis lacinia magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sagittis luctus odio eu tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque volutpat ligula eget lacus auctor sagittis. In hac habitasse platea dictumst. Nunc gravida elit vitae sem vehicula efficitur. Donec mattis ipsum et arcu lobortis, eleifend sagittis sem rutrum. Cras pharetra quam eget posuere fermentum. Sed id tincidunt justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.caveore]] #optional
+[[dependencies.connectivity]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -50,7 +50,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis lacinia magn
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.caveore]]
+[[dependencies.connectivity]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.16.2,)"
