--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=1.8
+mod_version=2.0
 modid=connectivity
 mc_version=1.16.5
 forge_version=36.1.0
-mapping=20210309
-mcp_version=1.16.5
+mapping=1.16.5
