--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx3G -Djava.net.preferIPv4Stack=true
 org.gradle.daemon=false
 mod_version=2.3
 modid=connectivity
-mc_version=1.16.5
-forge_version=36.1.0
-mapping=1.16.5
+mc_version=1.17.1
+forge_version=37.0.61
+mappings_version=1.17.1
+mappings_channel=official
