--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,12 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
-repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+repositories{
+    maven {
+        url "https://www.cursemaven.com"
+    }
 }
+
 
 dependencies {
 	// To change the versions see the gradle.properties file
