--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ minecraft_version=1.18.2
 yarn_mappings=1.18.2+build.1
 loader_version=0.13.3
 # Mod Properties
-mod_version=1.18.2-2.9
-maven_group=com.example
+mod_version=1.18.2-3.2
+maven_group=com.connectivity
 archives_base_name=connectivity-fabric
 # Dependencies
 fabric_version=0.47.8+1.18.2
