--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://fabricmc.net/versions.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.1
-loader_version=0.14.9
+# check these on https://fabricmc.net/develop
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.1
+loader_version=0.14.11
 # Mod Properties
-mod_version=1.19.2-3.7
+mod_version=1.19.3-3.8
 maven_group=com.connectivity
 archives_base_name=connectivity-fabric
 # Dependencies
-fabric_version=0.58.4+1.19.1
+fabric_version=0.68.1+1.19.3
