--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.1
 loader_version=0.14.11
+loom_version=1.1.+
+quiltflower_version=1.8.0
 # Mod Properties
-mod_version=1.19.3-4.1
+mod_version=4.2
 maven_group=com.connectivity
-archives_base_name=connectivity-fabric
+archives_base_name=connectivity
 # Dependencies
 fabric_version=0.68.1+1.19.3
