--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,2 @@
 public net.minecraft.network.ConnectionProtocol$PacketSet
-public net.minecraft.network.ConnectionProtocol$PacketSet f_129604_ # classToId
-public net.minecraft.network.ConnectionProtocol$PacketSet f_178326_ # idToDeserializer
-public-f net.minecraft.network.protocol.game.ClientboundCustomPayloadPacket f_132030_ # data
+public net.minecraft.network.protocol.game.ClientboundLevelChunkPacketData$BlockEntityInfo
